<resources>
    <string name="app_name">Мобильный дневник диабетика</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная страница</string>
    <string name="menu_gallery">База продуктов</string>
    <string name="menu_slideshow">Личный кабинет</string>
    <string name="menu_user_transfer">Перенос данных</string>

    <string name="sample_text">sample text</string>
    <string name="bottom_nav_label_notifications">Уведомления</string>
    <string name="bottom_nav_label_sugar">Сахар</string>
    <string name="bottom_nav_label_calories">Калории</string>
    <string name="bottom_nav_label_statistics">Статистика</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_enter">Войти</string>
    <string name="fragment_login_button_enter">Войти</string>
    <string name="user_delete_insurance_dialog">sure?</string>
    <string name="user_delete_insurance_dialog_affirmate">yes</string>
    <string name="fragment_user_delete_confirm">Удалить</string>
    <string name="user_delete_insurance_dialog_cancel">no</string>
    <string name="fragment_registration_button_register">Регистрация</string>
    <string name="fragment_account_logout_button">logout</string>
    <string name="fragment_import_button_to_reg">Перенести данные</string>
    <string name="fragment_import_button_import">import</string>
    <string name="fragment_passwd_login_button_enter">enter</string>
    <string name="welcome_fragment_welcome_text">Мобильный дневник самоконтроля диабетика поможет вам отслеживать уровень сахара в крови и употребляемые калории, а так же устанавливать уведомления для приёма препаратов.
Для использования приложения вам потребуется создать аккаунт или войти в существующий.</string>
    <string name="welcome_fragment_welcome_header">Добро пожаловать!</string>
    <string name="login_fragment_header">Вход</string>
    <string name="fragment_login_text">Для удаления пользователя используйте долгое нажатие на иконку</string>
    <string name="user_fragment_content_description">avatar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user">Новый</string>
    <string name="fragment_login_user_delete_menu">Удалить</string>
    <string name="registration_header">Регистрация</string>
    <string name="reg_fragment_your_name_header">Ваше имя</string>
    <string name="reg_fragment_passwd_confirm_header">Повторите пароль</string>
    <string name="reg_frag_edit_text_passwd">Пароль</string>
    <string name="reg_frag_edit_text_passwd_confirm">Пароль</string>
    <string name="reg_fragment_passwd_header">Пароль</string>
    <string name="reg_fragment_your_name_notification">Имя не должно содержать : ; , ? ^ @</string>
    <string name="reg_fragment_passwd_notification">Не менее 8 символов</string>
    <string name="reg_fragment_passwd_confirm_notification">Пароли не совпадают</string>
    <string name="reg_fragment_avatar_header">Аватар (необязательно)</string>
    <string name="reg_fragment_load_avatar_button">Загрузить</string>
    <string name="reg_fragment_import_text_view"><u>Загрузить из файла</u></string>
    <string name="reg_frag_text_button_to_login"><u>Уже есть аккаунт?</u></string>
    <string name="name_must_not_be_empty">Имя не должно быть пустым</string>
    <string name="passwd_must_not_be_empty">Пароль не может быть пустым</string>
    <string name="passwds_not_equal">Пароли не совпадают</string>
    <string name="login_frag_create_user_text">Регистрация</string>
    <string name="frag_delete_header">Удаление пользователя</string>
    <string name="frag_delete_body_text">Для удаления пользователя потребуется ввести пароль. Внимание! Это действие невозможно отменить!</string>
    <string name="frag_delete_name">Имя</string>
    <string name="frag_delete_wrong_passwd">Неверный пароль</string>
    <string name="reg_frag_toast">Регистрация успешна</string>
    <string name="cancel_deletion_deletion_dialog">Удаление отменено</string>
    <string name="delete_user_dialog_header">Внимание</string>
    <string name="user_deletion_dialog_body">Вы уверены, что хотите удалить аккунт? Это действие невозможно отменить! Будут удалены вся история значений пользователя и база продуктов.</string>
    <string name="fragment_user_delete_cancel">Отмена</string>
    <string name="successfull_deletion_deletion_dialog">Пользователь удалён</string>
    <string name="frag_passwd_login_header">Вход</string>
    <string name="fragment_passwd_login_confirm">Войти</string>
    <string name="frag_account_exit_button">Выйти из аккаунта</string>
    <string name="frag_account_change_avatar">Изменить аватар</string>
    <string name="frag_account_header">Личный кабинет</string>
    <string name="frag_account_write_avatar">Записать аватар</string>
    <string name="avatar_change_cancel">Новый аватар не загружен, изменение отменено</string>
    <string name="frag_user_transfer_header">Перенос данных</string>
    <string name="frag_user_transfer_body">Перенос данных осуществляется посредством формирования файла с расширением ddt, в котором содержатся все ваши записи. Для создания файла нажмите кнопку “сформировать в ddt” и выберите путь для сохранения. Для получения записей в формате xlsx, нажмите кнопку ”сформировать xlsx”.</string>
    <string name="frag_user_transfer_button">Сформировать в ddt</string>
    <string name="frag_user_transfer_toast_succsess">"Файл успешно сохранён в "</string>
    <string name="avatar_change_succsess">Аватар успешно изменён</string>
    <string name="frag_food_name">Название продукта</string>
    <string name="frag_food_value">000</string>
    <string name="frag_food_dimension">ккал</string>
    <string name="frag_food_separator">/</string>
    <string name="frag_food_dimen_value">000</string>
    <string name="frag_food_dimension_dimension">г</string>
    <string name="frag_food_value_dimension">ккал</string>
    <string name="frag_food_dialog_header">Изменить продукт</string>
    <string name="frag_food_dialog_food_name">Название продукта</string>
    <string name="frag_food_dialog_food_portion">порция</string>
    <string name="frag_food_dialog_food_kal">калорийность</string>
    <string name="frag_food_dialog_cancel">Отмена</string>
    <string name="frag_food_dialog_confirm">Сохранить</string>
    <string name="successfull_alteraion_food_dialog">Запись успешно изменена</string>
    <string name="cancel_alteraion_food_dialog">Изменение отклонено</string>
    <string name="failed_alteraion_food_dialog">Калорийность должна быть числом, ни одно поле не должно быть пустым</string>
    <string name="successfull_addition_food_dialog">Запись успешно добавлена</string>
    <string name="failed_addition_food_dialog">Калорийность должна быть числом, ни одно поле не должно быть пустым</string>
    <string name="frag_food_dialog_add_header">Добавить продукт</string>
    <string name="successfull_deletion_food_dialog">Удаление успешно</string>
    <string name="frag_foodsbase_search_hint">Введите текст запроса</string>
    <string name="frag_cal_text_date">31 декабря</string>
    <string name="frag_food_rec_note">Заметка</string>
    <string name="frag_food_rec_foods">Продукты</string>
    <string name="frag_food_rec_cal">Калории</string>
    <string name="frag_food_rec_time">Время</string>
    <string name="frag_cal_todays_cal">За весь день: 0ккал</string>
    <string name="home_selector_dialog_header">Добавить запись</string>
    <string name="add_cal_dialog_fragment">Добавить значение калорий</string>
    <string name="add_cal_dialog_date">Дата:</string>
    <string name="default_date">00-00-0000</string>
    <string name="frag_add_cal_time">Время:</string>
    <string name="default_time">00:00</string>
    <string name="frag_add_cal_button_add_record">Добавить запись</string>
    <string name="frag_add_cal_button_add_food">Добавить продукт</string>
    <string name="default_total_cal">0000</string>
    <string name="frag_add_cal_total_calories">Всего:</string>
    <string name="mass_selection_dialog_frag_edit_text">Введите долю порции</string>
    <string name="mass_selection_dialog_frag_portion">Порция</string>
    <string name="mass_selection_dialog_frag_button">Подтвердить</string>
    <string name="frag_sugar_rec_note">" "</string>
    <string name="frag_sugar_rec_isBefore">До еды</string>
    <string name="frag_sugar_rec_val">0.0 ммоль/л</string>
    <string name="frag_sugar_rec_time">00:00</string>
    <string name="add_cal_sugar_dialog_header">Добавить значение калорий</string>
    <string name="add_cal_reminder_dialog_header">Добавить уведомление</string>
    <string name="add_sugar_dialog_header">Добавить значение сахара в крови</string>
    <string name="frag_import_body">Для переноса данных вам потребуется файл с данными пользователя в формате ddt, сформированный на другом устройстве. Выберите его на вашем устройстве и нажмите кнопку “Перенести данные” для полного переноса пользователя.</string>
    <string name="bottom_nav_label_notes">Заметки</string>
    <string name="add_note_dialog_header">Добавить заметку</string>
    <string name="fragment_notes_alter_note">Редактировать</string>
    <string name="frag_food_dialog_food_fat">жиры</string>
    <string name="frag_food_dialog_food_protein">белки</string>
    <string name="frag_food_dialog_food_carb">углеводы</string>
    <string name="frag_user_transfer_button_xslx">Сформировать в xlsx</string>
    <string name="account_fragment_weight_header">Текущий вес:</string>
    <string name="kg">кг</string>
    <string name="fragment_account_change_weight_button">Сохранить вес</string>


    <string-array name="graph_array">
        <item>Калории</item>
        <item>Сахар</item>
        <item>XE</item>
    </string-array>


</resources>