<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/design_navigation_view">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_foodsbase"
            android:icon="@drawable/foodsbase_icon"
            android:title="@string/menu_gallery"
            />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/user_icon"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_user_transfer"
            android:icon="@drawable/database_icon"
            android:title="@string/menu_user_transfer"/>
    </group>
</menu>