<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".loginactivity.welcome.WelcomeFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            style="@style/TextBlackHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_fragment_welcome_header"
            android:gravity="center"
            android:id="@+id/fragment_welcome_text_header"/>
        <TextView
            style="@style/TextBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/fragment_welcome_text_header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingHorizontal="10dp"
            android:text="@string/welcome_fragment_welcome_text"
            android:gravity="center"
            android:id="@+id/welcome_fragment_welcome_text"/>
        <Button
            style="@style/ButtonAccept"
            app:layout_constraintBottom_toTopOf="@+id/welcome_frag_button_reg"
            android:text="@string/welcome_enter"
            android:layout_gravity="center"
            android:id="@+id/fragment_welcome_button_enter"
            android:layout_marginBottom="24dp"/>

        <Button
            style="@style/ButtonAccept"
            android:text="@string/login_frag_create_user_text"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
            android:id="@+id/welcome_frag_button_reg"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>